css/portfolio_grid.css
h2{
    font-size: 20px !important;
}

/* Portfolio Grid */
.portfolio-grid {
    display: grid; 
    grid-template-columns: repeat(3, minmax(400px, 1fr)); 
    gap: 20px; 
    margin: 20px; 
}

/* Each article within the grid */
.portfolio-grid article {

    padding: 16px;
    border-radius: 8px; 
    overflow: hidden; 
}

/* Image styles */
.portfolio-grid article img {
    width: 100%; 
    height: auto; 
    border-radius: var(--border-radius);
    
}

/* Hover effect */
.portfolio-grid article:hover img {
    filter: saturate(2.5); 
}

/* Title styles */
.portfolio-grid article h2 {
    font-size: 1.5rem; 
    font-weight: bold;
    margin-top: 12px; 
    color: #333; 
    line-height: 1.3; 
}

.portfolio-grid article h2:hover {
    color: #777777; 
}


/* TRUE IMAGE HOVER FX */
.image-container {
    position: relative;
    width: 100%;
    height: 0;
    padding-bottom: 75%; 
    overflow: hidden;
}

.primary-image {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover; 
    transition: opacity 0.3s ease-in-out;
}

.hover-image {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); 
    opacity: 0;
    transition: opacity 0.1s ease;
    object-fit: cover; 
    border-radius: var(--border-radius);
}

.image-container:hover .primary-image {
    opacity: 0;
}

.image-container:hover .hover-image {
    opacity: 1;
}


/* Responsive Design: Mobile */
@media (max-width: 1024px) {
    .portfolio-grid {
        grid-template-columns: repeat(2, minmax(400px, 1fr)); 
        gap: 16px;
    }
}

/* Smaller mobile screens */
@media (max-width: 768px) {
    .portfolio-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
        gap: 16px; 
    }

    .portfolio-grid article h2 {
        font-size: 1.25rem;
    }
}

